--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,13 @@
-theme: jekyll-theme-leap-day
+
+
+# basic options
+title: Your awesome title
+author: GitHub User
+email: your-email@domain.com
+description: A wonderful site
+twitter_username: jekyllrb
+github_username:  jekyll
+
+# Build settings
+markdown: kramdown
+theme:  jekyll-theme-leap-day
