--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 
 # basic options
-title: Your awesome title
+title: COMMUBICATION
 author: GitHub User
 email: your-email@domain.com
 description: A wonderful site
